--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   text-align: center;
+  background-color: #000;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -52,12 +53,13 @@ p {
 .about-title {
   font-size: 2rem;
   font-weight: normal;
-  color: #000;
+  color: #fff;
   text-align: left;
 }
 
 .about-text {
   /* padding: 1% 18% 5%; */
+  color: #fff;
   font-weight: normal;
   font-size: 1.2rem;
   text-align: left;
@@ -72,6 +74,11 @@ p {
   padding: 7% 10%;
 }
 
+section {
+  border-radius: 35px;
+  margin: 40px;
+}
+
 /* sections */
 .colored-section {
   background-color: #000;
@@ -79,7 +86,8 @@ p {
 }
 
 .white-section {
-  background-color: #fff;
+  background-color: #000;
+  color: #fff;
   color: #3a4750;
   z-index: 10;
 }
@@ -365,16 +373,17 @@ iframe {
   .title-img {
     position: static;
     width: 100%;
-    min-width: 700px;
+    min-width: 600px;
   }
 
   .mixing-margin {
-    margin: 0 120px;
+    /* margin: 0 120px; */
   }
 
-  /* .container-fluid {
+  .container-fluid {
     padding: 2%;
-  } */
+  }
+
   #testimonials {
     height: fit-content;
   }
